# internal/api/album.go
@@ -9,68 +9,89 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type CreateAlbumRequest struct {
+	AlbumName string `json:"album_name" binding:"required"`
+}
+
+// CreateAlbums godoc
+//
+//	@Summary		Create albums
+//	@Description	create albums
+//	@Tags			Albums
+//	@Accept			json
+//	@Produce		json
+//	@Router			/api/v1/albums [post]
+//	@Param			album	body		CreateAlbumRequest	true	"album info"
+//	@Success		200		{object}	Response
 func CreateAlbum(router *gin.RouterGroup, conf *config.Config) {
 	handler := func(c *gin.Context) {
 		username, exists := c.Get("username")
 		if !exists {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "User context not found"})
+			c.JSON(http.StatusInternalServerError, Error(400, "User context not found"))
 			return
 		}
 
 		user := entity.FindUser(username.(string))
 		if user == nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "user not found"})
+			c.JSON(http.StatusInternalServerError, Error(400, "user not found"))
 			return
 		}
 
-		var json struct {
-			AlbumName string `json:"album_name" binding:"required"`
-		}
+		var json CreateAlbumRequest
 
 		if c.Bind(&json) != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
+			c.JSON(http.StatusBadRequest, Error(400, "Invalid request"))
 			return
 		}
 
 		if entity.ExistsAlbum(json.AlbumName, user.Name) {
-			c.JSON(http.StatusConflict, gin.H{"error": "Album already exists"})
+			c.JSON(http.StatusConflict, Error(400, "Album already exists"))
 			return
 		}
 
 		album := entity.Album{Name: json.AlbumName}
 		alb, err := album.Create(json.AlbumName, user.ID)
 		if err != nil {
-			c.JSON(http.StatusConflict, gin.H{"error": "Album create failed"})
+			c.JSON(http.StatusConflict, Error(400, "Album create failed"))
 			return
 		}
 
-		c.JSON(http.StatusOK, gin.H{"message": fmt.Sprintf("album %d created successfully", alb.ID)})
+		c.JSON(http.StatusOK, Success(fmt.Sprintf("album %d created successfully", alb.ID)))
 	}
 
 	router.POST("/albums", handler)
 }
 
-func GetAlbums(router *gin.RouterGroup, conf *config.Config) {
+// GetAlbums godoc
+//
+//	@Summary		Get albums
+//	@Description	get albums
+//	@Tags			Albums
+//	@Accept			json
+//	@Produce		json
+//	@Router			/api/v1/albums [get]
+//	@Success		200	{object}	Response
+func ListAlbums(router *gin.RouterGroup, conf *config.Config) {
 	handler := func(c *gin.Context) {
 		username, exists := c.Get("username")
 		if !exists {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "User context not found"})
+			c.JSON(http.StatusInternalServerError, Error(400, "User context not found"))
 			return
 		}
 
 		user := entity.FindUser(username.(string))
 		if user == nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "user not found"})
+			c.JSON(http.StatusInternalServerError, Error(400, "user not found"))
 			return
 		}
 
 		albums, err := entity.ListAlbumsByUserID(user.ID)
 		if err != nil {
-			c.JSON(http.StatusConflict, gin.H{"error": "Albums get failed"})
+			c.JSON(http.StatusInternalServerError, Error(400, "Albums get failed"))
 			return
 		}
 
-		c.JSON(http.StatusOK, albums)
+		c.JSON(http.StatusOK, Success(albums))
 	}
 
 	router.GET("/albums", handler)
