# internal/api/docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  api.CreateAlbumRequest:
+    properties:
+      album_name:
+        type: string
+    required:
+    - album_name
+    type: object
   api.RegisterUserRequest:
     properties:
       password:
@@ -11,6 +18,14 @@ definitions:
     required:
     - password
     - username
+    type: object
+  api.Response:
+    properties:
+      code:
+        type: integer
+      data: {}
+      message:
+        type: string
     type: object
   api.UserLoginRequest:
     properties:
@@ -25,7 +40,7 @@ definitions:
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
-host: 192.168.209.130:8000
+host: localhost:8000
 info:
   contact:
     email: support@swagger.io
@@ -39,6 +54,104 @@ info:
   title: Syncbyte API
   version: "1.0"
 paths:
+  /api/v1/albums:
+    get:
+      consumes:
+      - application/json
+      description: get albums
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: Get albums
+      tags:
+      - Albums
+    post:
+      consumes:
+      - application/json
+      description: create albums
+      parameters:
+      - description: album info
+        in: body
+        name: album
+        required: true
+        schema:
+          $ref: '#/definitions/api.CreateAlbumRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: Create albums
+      tags:
+      - Albums
+  /api/v1/photo:
+    get:
+      consumes:
+      - application/json
+      description: get photos
+      parameters:
+      - description: album id
+        in: query
+        name: album_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: Get photos
+      tags:
+      - Photos
+  /api/v1/photo/import:
+    post:
+      consumes:
+      - application/json
+      description: import photo
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: Import photo
+      tags:
+      - Photos
+  /api/v1/photo/upload:
+    post:
+      consumes:
+      - application/json
+      description: upload photo
+      parameters:
+      - description: album id
+        in: formData
+        name: album_id
+        required: true
+        type: integer
+      - description: the file to upload
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: Upload photo
+      tags:
+      - Photos
   /delete/:username:
     delete:
       consumes:
