# internal/api/photo.go
@@ -13,11 +13,22 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// UploadPhoto godoc
+//
+//	@Summary		Upload photo
+//	@Description	upload photo
+//	@Tags			Photos
+//	@Accept			json
+//	@Produce		json
+//	@Router			/api/v1/photo/upload [post]
+//	@Param			album_id	formData	int		true	"album id"
+//	@Param			file		formData	file	true	"the file to upload"
+//	@Success		200			{object}	Response
 func UploadPhoto(router *gin.RouterGroup, conf *config.Config) {
 	handler := func(c *gin.Context) {
 		username, exists := c.Get("username")
 		if !exists {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "User context not found"})
+			c.JSON(http.StatusInternalServerError, Error(400, "User context not found"))
 			return
 		}
 
@@ -25,12 +36,12 @@ func UploadPhoto(router *gin.RouterGroup, conf *config.Config) {
 
 		albumIDStr := c.PostForm("album_id")
 		if albumIDStr == "" {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "Album ID is required"})
+			c.JSON(http.StatusBadRequest, Error(400, "Album ID is required"))
 			return
 		}
 		albumID, err := strconv.Atoi(albumIDStr)
 		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid album ID"})
+			c.JSON(http.StatusBadRequest, Error(400, "Invalid album ID"))
 			return
 		}
 
@@ -43,13 +54,13 @@ func UploadPhoto(router *gin.RouterGroup, conf *config.Config) {
 		}
 
 		if album == nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid album ID"})
+			c.JSON(http.StatusBadRequest, Error(400, "Invalid album ID"))
 			return
 		}
 
 		file, err := c.FormFile("file")
 		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "No file provided"})
+			c.JSON(http.StatusBadRequest, Error(400, "No file provided"))
 			return
 		}
 
@@ -60,52 +71,110 @@ func UploadPhoto(router *gin.RouterGroup, conf *config.Config) {
 			FileName: filepath.Base(uniqueFileName),
 			FileSize: file.Size,
 			FileType: strings.Split(file.Header.Get("Content-Type"), ";")[0],
+			AlbumID:  album.ID,
+			UserID:   user.ID,
 		}
 
 		src, err := file.Open()
 		if err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "open src file failed"})
+			c.JSON(http.StatusInternalServerError, Error(400, "open src file failed"))
 			return
 		}
 		defer src.Close()
 
 		if err := syncbyte.UploadPhoto(username.(string), album.Name, uniqueFileName, src, conf); err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to save file"})
+			c.JSON(http.StatusInternalServerError, Error(400, "Failed to save file"))
 			return
 		}
 
 		pho, err := photo.Create(uint(albumID))
 		if err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create photo"})
+			c.JSON(http.StatusInternalServerError, Error(400, "Failed to create photo"))
 			return
 		}
 
-		c.JSON(http.StatusOK, gin.H{"message": fmt.Sprintf("Photo %d create successfully", pho.ID)})
+		c.JSON(http.StatusOK, Success(fmt.Sprintf("Photo %d create successfully", pho.ID)))
 	}
 
 	router.POST("/photo/upload", handler)
 }
 
+// ImportPhoto godoc
+//
+//	@Summary		Import photo
+//	@Description	import photo
+//	@Tags			Photos
+//	@Accept			json
+//	@Produce		json
+//	@Router			/api/v1/photo/import [post]
+//	@Success		200	{object}	Response
 func ImportPhoto(router *gin.RouterGroup, conf *config.Config) {
 	handler := func(c *gin.Context) {
 		username, exists := c.Get("username")
 		if !exists {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "User context not found"})
+			c.JSON(http.StatusInternalServerError, Error(400, "User context not found"))
 			return
 		}
 
 		if err := syncbyte.ImportOriginals(username.(string), conf); err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to import photo"})
+			c.JSON(http.StatusInternalServerError, Error(400, "Failed to import photo"))
 			return
 		}
 
 		if err := syncbyte.ImportOriginalsFromWebDAV(username.(string), conf); err != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to import photo"})
+			c.JSON(http.StatusInternalServerError, Error(400, "Failed to import photo"))
 			return
 		}
 
-		c.JSON(http.StatusOK, gin.H{"message": "import successfully"})
+		c.JSON(http.StatusOK, Success("import successfully"))
 	}
 
 	router.POST("/photo/import", handler)
+}
+
+// GetPhotos godoc
+//
+//	@Summary		Get photos
+//	@Description	get photos
+//	@Tags			Photos
+//	@Accept			json
+//	@Produce		json
+//	@Router			/api/v1/photo [get]
+//	@Param			album_id	query		int	true	"album id"
+//	@Success		200			{object}	Response
+func ListPhotos(router *gin.RouterGroup, conf *config.Config) {
+	handler := func(c *gin.Context) {
+		username, exists := c.Get("username")
+		if !exists {
+			c.JSON(http.StatusInternalServerError, Error(400, "User context not found"))
+			return
+		}
+
+		user := entity.FindUser(username.(string))
+
+		albumID, _ := strconv.Atoi(c.Query("album_id"))
+
+		var album *entity.Album
+		for _, alb := range user.Albums {
+			if alb.ID == uint(albumID) {
+				album = &alb
+				break
+			}
+		}
+
+		if album == nil {
+			c.JSON(http.StatusBadRequest, Error(400, "Invalid album ID"))
+			return
+		}
+
+		photos, err := entity.ListPhotos(username.(string), album.ID)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, Error(400, "Failed to import photo"))
+			return
+		}
+
+		c.JSON(http.StatusOK, Success(photos))
+	}
+
+	router.GET("/photo", handler)
 }
